--- a/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/style.component.css
+++ b/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/style.component.css
@@ -41,3 +41,27 @@
   margin-left: 40%;
   margin-top: 20%
 }
+
+.hr-new {
+  border: 1px solid #30A7EE;
+  border-radius: 200px /8px;
+  height: 0px;
+  width: 90%;
+  text-align: center;
+ }
+
+
+/* Seccion de fieldset */
+fieldset.scheduler-border {
+    border: 1px groove #ddd !important;
+    /* padding: 0 1.4em 1.4em 1.4em !important; */
+    margin: 0 0 1.5em 0 !important;
+    -webkit-box-shadow:  0px 0px 0px 0px #000;
+            box-shadow:  0px 0px 0px 0px #000;
+}
+
+legend.scheduler-border {
+    width:inherit; /* Or auto */
+    padding:0 10px; /* To give a bit of padding on the left and right */
+    border-bottom:none;
+}
