--- a/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
@@ -40,16 +40,16 @@
 
 
       <!-- <div class="form-group"> -->
-            <angular2-multiselect [data]="itemList" name="selectPaises"
+            <!-- <angular2-multiselect [data]="itemList" name="selectPaises"
                           [settings]="settings"
                           [(ngModel)]="selectedItems"
                           (onSelect)="onItemSelect($event)"
                           (onDeSelect)="OnItemDeSelect($event)"
                           (onSelectAll)="onSelectAll($event)"
                           (onDeSelectAll)="onDeSelectAll($event)">
-            </angular2-multiselect>
+            </angular2-multiselect> -->
       <!-- </div> -->
-      <br>
+      <!-- <br> -->
 
 
       <div class="panel-heading">
