--- a/Angular_SICDOC/sicdoc/src/app/app.component.css
+++ b/Angular_SICDOC/sicdoc/src/app/app.component.css
@@ -24,3 +24,5 @@
   border-color:  #a94442 !important; /* red */
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(169,68,66,.6) !important;
 }
+
+.panel-body .btn:not(.btn-block) { width:120px;margin-bottom:10px; }
