--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/finalizar.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/finalizar.actividad.component.html
@@ -61,7 +61,7 @@
               <td> {{ item.fechaIngreso | date :'dd-MMM-yyyy' }} </td>
               <td> {{ item.fechaMaxEntrega | date :'dd-MMM-yyyy' }} </td>
               <td>
-                  <!-- Boton de Oficio de Respusta para la Comunicacion de Entrada -->
+                  <!-- Boton de Respuesta para la Comunicacion de Entrada -->
                   <a *ngIf="(item.idEstado == 3 || item.idEstado == 7 ) && (item.idTipoDocumento == 1 || item.idTipoDocumento == 2)
                         && item.idTipoComunicacion == 1 "
                     href="/#" (click)="datoOficio( item.codCorrespondenciaEnc, item.codReferenciaSreci,
@@ -76,6 +76,7 @@
                      <img src="/assets/icons/comunicacion/test_green_24x24.png" class="d-inline-block align-top" alt="" title="Comunicacion de Respuesta" >
                   </a>
 
+                  <!-- Boton de Agregar Actividad a Comunicacion -->
                   <!-- <a *ngIf="item.idEstado == 3 && item.idTipoDocumento != 1 " -->
                   <a *ngIf="(item.idEstado == 3 || item.idEstado == 7) "
                      href="/#" (click)="datoOficio( item.codCorrespondenciaEnc, item.codReferenciaSreci,
