--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/seguimiento.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/seguimiento.actividad.component.html
@@ -22,8 +22,8 @@
             {{ opcionSearch }}
           </button>
           <div class="dropdown-menu">
-            <a class="dropdown-item" style="cursor:pointer" (click)="selecOpcionSearch(1)">No. Interno Comunicación</a>
-            <a class="dropdown-item" style="cursor:pointer" (click)="selecOpcionSearch(2)">No. Referencia Comunicación</a>
+            <a class="dropdown-item" style="cursor:pointer" (click)="selecOpcionSearch(1)">Código Interno Comunicación</a>
+            <a class="dropdown-item" style="cursor:pointer" (click)="selecOpcionSearch(2)">Código Referencia Comunicación</a>
             <!-- <a class="dropdown-item" style="cursor:pointer" (click)="selecOpcionSearch(3)">Tema Comunicacion</a> -->
             <!-- <div role="separator" class="dropdown-divider"></div> -->
             <!-- <a class="dropdown-item" href="#">Descipcion</a> -->
@@ -119,7 +119,7 @@
                         <h4 class="card-header">F. Ingreso</h4>
                         <div class="card-block">
                           <!-- <h4 class="card-title">Special title treatment</h4> -->
-                          <p style="margin-left:10px">{{ tableSeguimientoActividadList.fechaIngreso | generateDate }}</p>
+                          <p style="margin-left:10px">{{ tableSeguimientoActividadList.fechaIngreso | date :'dd-MMM-yyyy' }}</p>
                           <!-- <br> -->
                         </div>
                       </div>
@@ -127,7 +127,7 @@
                         <h4 class="card-header">F. Entrega</h4>
                         <div class="card-block">
                           <!-- <h4 class="card-title">Special title treatment</h4> -->
-                          <p style="margin-left:10px">{{ tableSeguimientoActividadList.fechaEntrega | generateDate }}</p>
+                          <p style="margin-left:10px">{{ tableSeguimientoActividadList.fechaEntrega | date :'dd-MMM-yyyy' }}</p>
                           <!-- <br> -->
                         </div>
                       </div>
@@ -135,7 +135,7 @@
                         <h4 class="card-header">F. Modificación</h4>
                         <div class="card-block">
                           <!-- <h4 class="card-title">Special title treatment</h4> -->
-                          <p style="margin-left:10px">{{ tableSeguimientoActividadList.fechaModificacion | generateDate }}</p>
+                          <p style="margin-left:10px">{{ tableSeguimientoActividadList.fechaModificacion | date :'dd-MMM-yyyy' }}</p>
                           <!-- <br> -->
                         </div>
                       </div>
@@ -143,7 +143,7 @@
                         <h4 class="card-header">F. Finalización</h4>
                         <div class="card-block">
                           <!-- <h4 class="card-title">Special title treatment</h4> -->
-                          <p style="margin-left:10px">{{ tableSeguimientoActividadList.fechaFinalizacion | generateDate }}</p>
+                          <p style="margin-left:10px">{{ tableSeguimientoActividadList.fechaFinalizacion | date :'dd-MMM-yyyy' }}</p>
                           <!-- <br> -->
                         </div>
                       </div>
@@ -313,6 +313,7 @@
                   *ngIf="loadTabla2 == true">
                   <thead >
                       <tr>
+                        <th>No.</th>
                         <th>Estado</th>
                         <th>No.Interno</th>
                         <th>No.Referencia</th>
@@ -323,7 +324,8 @@
                       </tr>
                   </thead>
                   <tbody>
-                  <tr *ngFor="let item of JsonOutgetlistaSeguimiento">
+                  <tr *ngFor="let item of JsonOutgetlistaSeguimiento; let i = index">
+                    <td> {{ i + 1 }} </td>
                     <td [ngClass]="{ 'text-warning': item.idEstado.idEstado == 3, 'text-info' : item.idEstado.idEstado == 8,
                                      'text-primary' : item.idEstado.idEstado == 5, 'text-success' : item.idEstado.idEstado == 7 }">
                       {{ item.idEstado.descripcionEstado }}</td>
