--- a/Angular_SICDOC/sicdoc/src/app/views/shared/default.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/shared/default.component.html
@@ -13,10 +13,130 @@
 
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
-          <h1 class="display-3">Bienvenido: {{ identity.nombre }} {{ identity.apellido }} </h1>
-          <p class="lead">{{ identity.nombre }} {{ identity.apellido }}</p>
-        </div>
-      </div>
+          <h1 class="display-3">Bienvenid@: {{ identity.nombre }} {{ identity.apellido }} </h1>
+          <!-- <p class="lead">Hola:  {{ identity.nombre }} {{ identity.apellido }}, te presentamos el resumen de Comunicación</p> -->
+        
+        <!-- Inicio de Resumenes de Activiadades SICDOC   -->
+        <!-- Row # 1 de Resumenes -->
+        <!-- <h5 class="h5">Oficios</h5>
+        <div class="row">              
+          <div class="col-md-2 col-lg-2">
+              <div class="panel panel-info">
+                <div class="panel-heading">
+                  <div class="row">
+                    <div class="col-xs-3">
+                      <i class="fa fa-file-archive-o fa-4x"></i>
+                    </div>
+                    <div class="col-xs-3 text-right">
+                      <p class="announcement-heading">1</p>
+                      <p class="announcement-text">Pendientes</p>
+                    </div>
+                  </div>
+                </div> -->
+                <!-- <a href="#">
+                  <div class="panel-footer announcement-bottom">
+                    <div class="row">
+                      <div class="col-xs-6">
+                        Expand
+                      </div>
+                      <div class="col-xs-6 text-right">
+                        <i class="fa fa-arrow-circle-right"></i>
+                      </div>
+                    </div>
+                  </div>
+                </a> -->
+              <!-- </div>
+            </div>
 
-    </div>
+            <div class="col-md-12 col-lg-2">
+              <div class="panel panel-warning">
+                <div class="panel-heading">
+                  <div class="row">
+                    <div class="col-xs-3">
+                      <i class="fa fa-file-powerpoint-o fa-4x"></i>
+                    </div>
+                    <div class="col-xs-3 text-right">
+                      <p class="announcement-heading">12</p>
+                      <p class="announcement-text"> Finalizados</p>
+                    </div>
+                  </div>
+                </div>                
+              </div>
+            </div>
+            <div class="col-lg-2">
+              <div class="panel panel-danger">
+                <div class="panel-heading">
+                  <div class="row">
+                    <div class="col-xs-3">
+                      <i class="fa fa-file-excel-o fa-4x"></i>
+                    </div>
+                    <div class="col-xs-3 text-right">
+                      <p class="announcement-heading">18</p>
+                      <p class="announcement-text">Users</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            
+            <div class="col-lg-2">
+              <div class="panel panel-success">
+                <div class="panel-heading">
+                  <div class="row">
+                    <div class="col-xs-3">
+                      <i class="fa fa-comments fa-4x"></i>
+                    </div>
+                    <div class="col-xs-3 text-right">
+                      <p class="announcement-heading">9000</p>
+                      <p class="announcement-text"> Orders!</p>                                
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-2">
+                <div class="panel panel-success">
+                  <div class="panel-heading">
+                    <div class="row">
+                      <div class="col-xs-3">
+                        <i class="fa fa-comments fa-4x"></i>
+                      </div>
+                      <div class="col-xs-3 text-right">
+                        <p class="announcement-heading">9000</p>
+                        <p class="announcement-text"> Orders!</p>                                
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+
+              <div class="col-lg-2">
+                  <div class="panel panel-success">
+                    <div class="panel-heading">
+                      <div class="row">
+                        <div class="col-xs-3">
+                          <i class="fa fa-comments fa-4x"></i>
+                        </div>
+                        <div class="col-xs-3 text-right">
+                          <p class="announcement-heading">9000</p>
+                          <p class="announcement-text"> Orders!</p>                                
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div> 
+
+
+          </div> -->
+          <!-- /.row -->
+
+          <!-- <hr> -->
+          
+
+        <!-- </div> -->
+        <!-- Fin de Primer Container -->
+      </div>
+    </div>    
 </div>
