--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/finalizar.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/finalizar.actividad.component.html
@@ -73,7 +73,7 @@
                                                          listarCodigoCorrespondenciaAgregarActividad(item.idTipoDocumento, item.idTipoComunicacion);"
                      data-toggle="modal" data-target="#t_and_c_m2" >
                      <!-- <i class="material-icons" data-placement="top" title="Comunicacion de Respuesta">create_new_folder</i> -->
-                     <img src="/assets/icons/comunicacion/test_green_24x24.png" class="d-inline-block align-top" alt="" title="Comunicacion de Respuesta" >
+                     <img src="/assets/icons/comunicacion/test_green_24x24.png" class="d-inline-block align-top" alt="" title="Comunicación de Respuesta" >
                   </a>
 
                   <!-- Boton de Agregar Actividad a Comunicacion -->
@@ -87,9 +87,10 @@
                                                          item.idTipoDocumento, item.idTipoComunicacion );
                                                          listarCodigoCorrespondenciaAgregarActividad(item.idTipoDocumento, item.idTipoComunicacion);"
                           data-toggle="modal" data-target="#t_and_c_m3" >
-                    <img src="/assets/icons/comunicacion/written-page_brow_24x24.png" class="d-inline-block align-top" alt="" title="Agregar Actividad a Comunicacion">
+                    <img src="/assets/icons/comunicacion/written-page_brow_24x24.png" class="d-inline-block align-top" alt="" title="Agregar Actividad a Comunicación">
                   </a>
 
+                  <!-- Boton de Finalizar Comunicacion -->
                   <a href="/#" (click)="datoOficio( item.codCorrespondenciaEnc, item.codReferenciaSreci,
                                                          item.idDeptoFuncional,
                                                          item.nombre1Funcionario, item.apellido1Funcionario,
@@ -99,9 +100,21 @@
                                                          listarCodigoCorrespondenciaAgregarActividad(item.idTipoDocumento, item.idTipoComunicacion);"
                           data-toggle="modal" data-target="#t_and_c_m" >
                       <!-- <i class="material-icons" data-toggle="tooltip" data-placement="top" title="Finalizar Comunicacion" >assignment_turned_in</i> -->
-                      <img src="/assets/icons/comunicacion/verified-text-paper_blue_24x24.png" class="d-inline-block align-top" alt="" title="Finalizar Comunicacion" >
+                      <img src="/assets/icons/comunicacion/verified-text-paper_blue_24x24.png" class="d-inline-block align-top" alt="" title="Finalizar Comunicación" >
                   </a>
 
+                  <!-- Boton de Anular Comunicacion -->
+                  <a href="/#" (click)="datoOficio( item.codCorrespondenciaEnc, item.codReferenciaSreci,
+                                                         item.idDeptoFuncional,
+                                                         item.nombre1Funcionario, item.apellido1Funcionario,
+                                                         item.nombre2Funcionario, item.apellido2Funcionario,
+                                                         item.idFuncionario, item.idEstado, item.idCorrespondenciaEnc,
+                                                         item.idTipoDocumento, item.idTipoComunicacion );
+                                                         listarCodigoCorrespondenciaAgregarActividad(item.idTipoDocumento, item.idTipoComunicacion);"
+                          data-toggle="modal" data-target="#t_and_c_m4" >
+                      <!-- <i class="material-icons" data-toggle="tooltip" data-placement="top" title="Finalizar Comunicacion" >assignment_turned_in</i> -->
+                      <img src="/assets/icons/comunicacion/education-access-concept_24x24.png" class="d-inline-block align-top" alt="" title="Anular Comunicación" >
+                  </a>
               </td>
             </tr>
         </tbody>
@@ -329,5 +342,64 @@
 </div><!-- /.modal-content -->
 </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
+
+
+<!-- Modal de Anular la Comunicacion-->
+<div *ngIf="idEstadoModal != 5 " class="modal fade" id="t_and_c_m4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"
+      data-backdrop="static" data-keyboard="false">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true" > <i class="material-icons">close</i> </button>
+        <h4 class="modal-title" id="myModalLabel">Comunicación No. {{ codOficioIntModal }} | Referencia ( {{ codOficioRefModal }} )</h4>
+        <!-- Loader de Carga de los Datos -->
+        <div id="loader-2" *ngIf="loading_table == 'show'" >
+          <img src="assets/images/loading_2.gif" alt="Cargando Tareas" style="width:25px;">
+        </div>
+      </div>
+
+      <div class="modal-body">
+        <!-- Formulario del Oficio Asignado -->
+          <form #AnularComForm="ngForm" (ngSubmit)="onSubmit(agregarActividadResp, 4)" name="AnularComForm" role="form">
+            <!-- fila 1 del Formulario -->
+            <h4>Anular Comunicación | {{ idCorrepEncModal }}</h4>
+            <hr class="colorgraph">
+            <div class="row">
+              <div class="col-md-6 mb-3">
+                <label for="validationDefault01">Funcionario Asignado</label>
+                <input type="text" class="form-control" id="validationDefault01" placeholder="First name"
+                       value="{{ nombre1FuncModal }} {{ nombre2FuncModal }} {{ apellido1FuncModal }} {{ apellido2FuncModal }} " disabled>
+              </div>
+
+            </div>
+
+            <!-- fila 2 del Formulario -->
+            <div class="row">
+              <div class="col-md-12 mb-4">
+                <!-- <label for="validationDefault01">Descripción del Oficio</label> -->
+                <textarea #descripcionOficio="ngModel" type="text" name="descripcionOficio" id="descripcionOficio"
+                        ngControl="descripcionOficio" [(ngModel)]="finalizarOficios.descripcionOficio" required maxlength="1400" minlength="15"
+                        class="form-control" id="exampleFormControlTextarea1" placeholder="Descripción de la Comunicacion" rows="3">
+                </textarea>
+                <small class="form-text text-muted" *ngIf="descripcionOficio.errors?.required" >La Descripción es obligatoria</small>
+                <small class="form-text text-muted" *ngIf="descripcionOficio.errors?.minlength" >Se nesesita por lo menos {{ descripcionOficio.errors.minlength.requiredLength }} caracteres</small>
+                <small class="form-text text-muted" *ngIf="descripcionOficio.errors?.maxlength" >La capacidad maxima para la Descripcion es: 1400 caracteres</small>
+              </div>
+            </div>
+
+            <hr class="colorgraph">
+            <!-- <button class="btn btn-primary" type="submit">Submit form</button> -->
+            <!-- <button type="button" class="btn btn-primary">Limpiar</button> -->
+            <button class="btn btn-success" type="submit" [disabled]="!AnularComForm.valid" style="cursor: pointer">Guardar</button>
+            <button type="button" id="closeModalAnulaCom" class="btn btn-danger" data-dismiss="modal" style="cursor: pointer">Cerrar</button>
+        </form>
+    </div>
+      <div class="modal-footer">
+
+      </div>
+</div><!-- /.modal-content -->
+</div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
 
 </div> <!--  Fin de container -->
