--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/finalizar.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/finalizar.actividad.component.html
@@ -62,7 +62,7 @@
               <td> {{ item.fechaMaxEntrega | date :'dd-MMM-yyyy' }} </td>
               <td>
                   <!-- Boton de Respuesta para la Comunicacion de Entrada -->
-                  <a *ngIf="(item.idEstado == 3 || item.idEstado == 7 ) && (item.idTipoDocumento == 1 || item.idTipoDocumento == 2)
+                  <!-- <a *ngIf="(item.idEstado == 3 || item.idEstado == 7 ) && (item.idTipoDocumento == 1 || item.idTipoDocumento == 2)
                         && item.idTipoComunicacion == 1 "
                     href="/#" (click)="datoOficio( item.codCorrespondenciaEnc, item.codReferenciaSreci,
                                                          item.idDeptoFuncional,
@@ -71,10 +71,9 @@
                                                          item.idFuncionario, item.idEstado, item.idCorrespondenciaEnc,
                                                          item.idTipoDocumento, item.idTipoComunicacion );
                                                          listarCodigoCorrespondenciaAgregarActividad(item.idTipoDocumento, item.idTipoComunicacion);"
-                     data-toggle="modal" data-target="#t_and_c_m2" >
-                     <!-- <i class="material-icons" data-placement="top" title="Comunicacion de Respuesta">create_new_folder</i> -->
+                     data-toggle="modal" data-target="#t_and_c_m2" >                     
                      <img src="/assets/icons/comunicacion/test_green_24x24.png" class="d-inline-block align-top" alt="" title="Comunicación de Respuesta" >
-                  </a>
+                  </a> -->
 
                   <!-- Boton de Agregar Actividad a Comunicacion -->
                   <!-- <a *ngIf="item.idEstado == 3 && item.idTipoDocumento != 1 " -->
@@ -84,7 +83,8 @@
                                                          item.nombre1Funcionario, item.apellido1Funcionario,
                                                          item.nombre2Funcionario, item.apellido2Funcionario,
                                                          item.idFuncionario, item.idEstado, item.idCorrespondenciaEnc,
-                                                         item.idTipoDocumento, item.idTipoComunicacion );
+                                                         item.idTipoDocumento, item.idTipoComunicacion,
+                                                         item.temaComunicacion, item.descInstitucion, item.perfilInstitucion);
                                                          listarCodigoCorrespondenciaAgregarActividad(item.idTipoDocumento, item.idTipoComunicacion);"
                           data-toggle="modal" data-target="#t_and_c_m3" >
                     <img src="/assets/icons/comunicacion/written-page_brow_24x24.png" class="d-inline-block align-top" alt="" title="Agregar Actividad a Comunicación">
@@ -96,20 +96,22 @@
                                                          item.nombre1Funcionario, item.apellido1Funcionario,
                                                          item.nombre2Funcionario, item.apellido2Funcionario,
                                                          item.idFuncionario, item.idEstado, item.idCorrespondenciaEnc,
-                                                         item.idTipoDocumento, item.idTipoComunicacion );
+                                                         item.idTipoDocumento, item.idTipoComunicacion,
+                                                         item.temaComunicacion, item.descInstitucion, item.perfilInstitucion );
                                                          listarCodigoCorrespondenciaAgregarActividad(item.idTipoDocumento, item.idTipoComunicacion);"
                           data-toggle="modal" data-target="#t_and_c_m" >
                       <!-- <i class="material-icons" data-toggle="tooltip" data-placement="top" title="Finalizar Comunicacion" >assignment_turned_in</i> -->
                       <img src="/assets/icons/comunicacion/verified-text-paper_blue_24x24.png" class="d-inline-block align-top" alt="" title="Finalizar Comunicación" >
                   </a>
-
+                   
                   <!-- Boton de Anular Comunicacion -->
                   <a href="/#" (click)="datoOficio( item.codCorrespondenciaEnc, item.codReferenciaSreci,
                                                          item.idDeptoFuncional,
                                                          item.nombre1Funcionario, item.apellido1Funcionario,
                                                          item.nombre2Funcionario, item.apellido2Funcionario,
                                                          item.idFuncionario, item.idEstado, item.idCorrespondenciaEnc,
-                                                         item.idTipoDocumento, item.idTipoComunicacion );
+                                                         item.idTipoDocumento, item.idTipoComunicacion,
+                                                         item.temaComunicacion, item.descInstitucion, item.perfilInstitucion );
                                                          listarCodigoCorrespondenciaAgregarActividad(item.idTipoDocumento, item.idTipoComunicacion);"
                           data-toggle="modal" data-target="#t_and_c_m4" >
                       <!-- <i class="material-icons" data-toggle="tooltip" data-placement="top" title="Finalizar Comunicacion" >assignment_turned_in</i> -->
@@ -249,10 +251,22 @@
                 <h4>Creacion de Comunicación de Respuesta | {{ idCorrepEncModal }}</h4>
                 <hr class="colorgraph">
                 <div class="row">
-                  <div class="col-md-6 mb-3">
+                  <div class="col-md-4 mb-3">
                     <label for="validationDefault01">Funcionario Asignado</label>
                     <input type="text" class="form-control" id="validationDefault01" placeholder="First name"
                            value="{{ nombre1FuncModal }} {{ nombre2FuncModal }} {{ apellido1FuncModal }} {{ apellido2FuncModal }} " disabled>
+                  </div>
+    
+                  <div class="col-md-6 mb-3">
+                    <label for="validationDefault01">Temática</label>
+                    <input type="text" class="form-control" id="validationDefault01" placeholder="First name"
+                           value="{{ temaComunicacionModal }}" disabled>
+                  </div>
+    
+                  <div class="col-md-2 mb-3">
+                    <label for="validationDefault01">Institución</label>
+                    <input type="text" class="form-control" id="validationDefault01" placeholder="First name"
+                          title="{{ descinstitucionComunicaiconModal }}" value="{{ institucionComunicaiconModal }} " disabled>
                   </div>
 
                 </div>
@@ -307,10 +321,22 @@
             <h4>Agregar Actividad a Comunicacion | {{ idCorrepEncModal }}</h4>
             <hr class="colorgraph">
             <div class="row">
-              <div class="col-md-6 mb-3">
+              <div class="col-md-4 mb-3">
                 <label for="validationDefault01">Funcionario Asignado</label>
                 <input type="text" class="form-control" id="validationDefault01" placeholder="First name"
                        value="{{ nombre1FuncModal }} {{ nombre2FuncModal }} {{ apellido1FuncModal }} {{ apellido2FuncModal }} " disabled>
+              </div>
+
+              <div class="col-md-6 mb-3">
+                <label for="validationDefault01">Temática</label>
+                <input type="text" class="form-control" id="validationDefault01" placeholder="First name"
+                       value="{{ temaComunicacionModal }}" disabled>
+              </div>
+
+              <div class="col-md-2 mb-3">
+                <label for="validationDefault01">Institución</label>
+                <input type="text" class="form-control" id="validationDefault01" placeholder="First name"
+                      title="{{ descinstitucionComunicaiconModal }}" value="{{ institucionComunicaiconModal }} " disabled>
               </div>
 
             </div>
@@ -365,10 +391,22 @@
             <h4>Anular Comunicación | {{ idCorrepEncModal }}</h4>
             <hr class="colorgraph">
             <div class="row">
-              <div class="col-md-6 mb-3">
+              <div class="col-md-4 mb-3">
                 <label for="validationDefault01">Funcionario Asignado</label>
                 <input type="text" class="form-control" id="validationDefault01" placeholder="First name"
                        value="{{ nombre1FuncModal }} {{ nombre2FuncModal }} {{ apellido1FuncModal }} {{ apellido2FuncModal }} " disabled>
+              </div>
+
+              <div class="col-md-6 mb-3">
+                <label for="validationDefault01">Temática</label>
+                <input type="text" class="form-control" id="validationDefault01" placeholder="First name"
+                       value="{{ temaComunicacionModal }}" disabled>
+              </div>
+
+              <div class="col-md-2 mb-3">
+                <label for="validationDefault01">Institución</label>
+                <input type="text" class="form-control" id="validationDefault01" placeholder="First name"
+                      title="{{ descinstitucionComunicaiconModal }}" value="{{ institucionComunicaiconModal }} " disabled>
               </div>
 
             </div>
