--- a/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/ingreso.comunicacion/ingreso.comunicacion.component.css
+++ b/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/ingreso.comunicacion/ingreso.comunicacion.component.css
@@ -50,3 +50,25 @@
   width: 90%;
   text-align: center;
  }
+
+
+ .text-on-pannel {
+  background: #fff none repeat scroll 0 0;
+  height: auto;
+  margin-left: 2px;
+  padding: 3px 5px;
+  position: absolute;
+  margin-top: -47px;
+  border: 1px solid #337ab7;
+  border-radius: 8px;
+  width: auto;
+}
+
+.panel {
+  /* for text on pannel */
+  margin-top: 10px !important;
+}
+
+.panel-body {
+  padding-top: 30px !important;
+}
