--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
@@ -168,12 +168,13 @@
                     <ul class="nav nav-tabs nav-justified indigo" role="tablist">
                         <li class="nav-item">
                             <h4><a class="nav-link active" data-toggle="tab" href="#panel5" role="tab">
-                              <i class="fa fa-user"></i> Información de Seguimiento
+                                <img src="assets/icons/comunicacion/man-reading_blue_24x24.png" alt=""> Información de Seguimiento
                             </a></h4>
                         </li>
                         <li class="nav-item">
                             <h4><a class="nav-link" data-toggle="tab" href="#panel6" role="tab">
-                              <i class="fa fa-heart"></i> Información de Documentos
+                              <!-- <i class="fa fa-heart"></i> Información de Documentos -->
+                              <img src="assets/icons/comunicacion/computer-and-books-studying-tools_24x24.png" alt=""> Información de Documentos
                             </a></h4>
                         </li>
                     </ul>
